--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a
                 class="a__link"
                 target="_blank"
-                href="https://vercel.com/sarvarabduganiyev/e-com-internet-shop"
+                href="https://e-com-internet-shop.vercel.app/"
                 >E-com-internet-shop</a
               >
               <h3 class="list__title">Technology:</h3>
