--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 class="a__link"
                 target="_blank"
                 href="https://arzonbizda-uz-5b3916.netlify.app/"
-                >Arzononi bizda real-prpject ("Mohirdev" Company)</a
+                >Arzononi bizda real-project ("Mohirdev" Company)</a
               >
               <h3 class="list__title">Technology:</h3>
               <ul>
