--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
               </ul>
             </div>
           </div>
-
           <div class="grid__item">
             <div>
               <a
@@ -105,7 +104,6 @@
               </ul>
             </div>
           </div>
-          <!--  -->
           <div class="grid__item">
             <div>
               <a
@@ -168,7 +166,7 @@
                 class="a__link"
                 target="_blank"
                 href="https://bio-kimyo-project.vercel.app/"
-                >bio-kimyo-project (with language)</a
+                >bio-kimyo-project</a
               >
               <h3 class="list__title">Technology:</h3>
               <ul>
@@ -178,6 +176,26 @@
                 <li>Javascript</li>
                 <li>React Js</li>
                 <li>i18 react library</li>
+              </ul>
+            </div>
+          </div>
+          <div class="grid__item">
+            <div>
+              <a
+                class="a__link"
+                target="_blank"
+                href="https://movie-app-tau-steel.vercel.app/"
+                >Movie App (with React) 🆕</a
+              >
+              <h3 class="list__title">Technology:</h3>
+              <ul>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>Tailwind CSS</li>
+                <li>Javascript</li>
+                <li>React Js</li>
+                <li>Packages (Pagination)</li>
+                <li>www.themoviedb.org (free)</li>
               </ul>
             </div>
           </div>
