--- a/index.html
+++ b/index.html
@@ -199,6 +199,25 @@
               </ul>
             </div>
           </div>
+          <div class="grid__item">
+            <div>
+              <a
+                class="a__link"
+                target="_blank"
+                href="https://meal-food.vercel.app/"
+                >Meal-Food(with React) 🆕</a
+              >
+              <h3 class="list__title">Technology:</h3>
+              <ul>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>Materialize CSS</li>
+                <li>Javascript</li>
+                <li>React Js</li>
+                <li>Free food api</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
