--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <a
                 class="a__link"
                 target="_blank"
-                href="https://react-auth-real-api.vercel.app/login"
-                >React auth (with real api)</a
+                href="https://login-auth-react-project.vercel.app/"
+                >React auth (with real api) 🔒</a
               >
               <h3 class="list__title">Technology:</h3>
               <ul>
