--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="shadow__div">
         <h1 class="first_title">Portfolio</h1>
         <div class="grid__box">
+          <!-- grid lists -->
           <div class="grid__item">
             <a class="a__link" target="_blank" href="https://loftcity.uz/"
               >loftcity.uz</a
