--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 class="a__link"
                 target="_blank"
                 href="https://movie-app-tau-steel.vercel.app/"
-                >Movie App (with React) 🆕</a
+                >Movie App (with React)</a
               >
               <h3 class="list__title">Technology:</h3>
               <ul>
@@ -206,7 +206,7 @@
                 class="a__link"
                 target="_blank"
                 href="https://meal-food.vercel.app/"
-                >Meal-Food(with React) 🆕</a
+                >Meal-Food(with React)</a
               >
               <h3 class="list__title">Technology:</h3>
               <ul>
@@ -216,6 +216,24 @@
                 <li>Javascript</li>
                 <li>React Js</li>
                 <li>Free food api</li>
+              </ul>
+            </div>
+          </div>
+          <div class="grid__item">
+            <div>
+              <a
+                class="a__link"
+                target="_blank"
+                href="https://archive-science.vercel.app/"
+                >Archive Faculty new web site home page 🆕</a
+              >
+              <h3 class="list__title">Technology:</h3>
+              <ul>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>Swiper JS</li>
+                <li>Imask package</li>
+                <li>React Js</li>
               </ul>
             </div>
           </div>
