--- a/index.html
+++ b/index.html
@@ -237,6 +237,24 @@
               </ul>
             </div>
           </div>
+          <div class="grid__item">
+            <div>
+              <a
+                class="a__link"
+                target="_blank"
+                href="https://pizza-card-project.vercel.app/"
+                >Pizza-card-project (functional only) 🆕</a
+              >
+              <h3 class="list__title">Technology:</h3>
+              <ul>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>React Js</li>
+                <li>React Toastify package</li>
+                <li>Local data</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
